--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<h1>Prova</h1>
+<div style="display: flex; align-items: center; justify-content: center;">
+  <h1>Libri letti</h1>
+  <h2>15</h2>
+</div>
